state and city country update
