# backend/src/routers/calculateAccommodation.router.js
@@ -1,0 +1,8 @@
+import express from "express";
+import { calculateAccommodationController } from "../controllers/calculateAccommodation.controller.js"
+
+const router = express.Router();
+
+router.post("/calculate-accommodation", calculateAccommodationController);
+
+export default router;
